minor fix on auth and activity
