# docs/swagger.json
@@ -66,6 +66,63 @@
                 }
             }
         },
+        "/v1/auth/register": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "AdminRegistrationKeyAuth": []
+                    }
+                ],
+                "description": "Register a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "enter your phone number and password to register",
+                        "name": "registerInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "No Content - User created successfully"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/categories": {
             "get": {
                 "security": [
@@ -3277,6 +3334,9 @@
             "properties": {
                 "token": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/dto.UserLoginSummary"
                 }
             }
         },
@@ -3466,16 +3526,36 @@
                 }
             }
         },
-        "dto.UserSummary": {
+        "dto.UserLoginSummary": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
                 },
                 "phone": {
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserSummary": {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 }
             }
@@ -3566,6 +3646,29 @@
                     "minLength": 3
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -3675,12 +3778,6 @@
         },
         "models.ProductUpdate": {
             "type": "object",
-            "required": [
-                "category_id",
-                "name",
-                "unit_id",
-                "warning_threshold"
-            ],
             "properties": {
                 "category_id": {
                     "type": "integer"
@@ -3800,6 +3897,12 @@
         }
     },
     "securityDefinitions": {
+        "AdminRegistrationKeyAuth": {
+            "description": "Enter your Admin Registration Key here",
+            "type": "apiKey",
+            "name": "X-Admin-Key",
+            "in": "header"
+        },
         "ApiKeyAuth": {
             "description": "Enter your API Key here",
             "type": "apiKey",
