# pkg/api/dto/auth.go
@@ -5,5 +5,14 @@ type UserDto struct {
 	Password string `json:"password" binding:"required,min=3,max=72"`
 }
 type SuccessAuthResponse struct {
-	Token string `json:"token"`
+	Token string           `json:"token"`
+	User  UserLoginSummary `json:"user"`
+}
+
+type UserLoginSummary struct {
+	Phone     string `json:"phone"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
 }
